# Saturnalia-guidebook

./: .nojekyll  README.md  _quarto.yml  about.html  about.qmd  anita.html  anita.qmd  borderless.scss  clues.html  clues.qmd  clues.txt  contribute.html  contribute.qmd  format_clues.py  google.html  index.html  index.qmd  items.txt  locations.txt  locations2.txt  message_box.html  notes.txt  pyproject.toml  quick_locations.txt  robots.txt  search.json  sitemap.xml  styles.css  styles_noscroll.css  town_quest.html  town_quest.qmd
.github/workflows/: publish.yml
_freeze/about/execute-results/: html.json
_freeze/anita/execute-results/: html.json
_freeze/clues/execute-results/: html.json
_freeze/town_quest/execute-results/: html.json
site_libs/bootstrap/: bootstrap.min.css
