[tool.poetry]
name = "saturnalia-guide"
version = "0.1.0"
description = ""
authors = ["Jacob Rogers <jacob.p.r@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
jupyter = "1.0.0"
ipyleaflet = "0.17.2"
ipywidgets = "^8.1.1"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
